[package]
name = "rus-troll-tweet-dataset"
version = "0.1.0"
edition = "2024"

[features]
default = []
neo4_cypher = []
neo4_troll = []
neo4_twitter = ["reqwest", "serde", "serde_json", "dotenv"]

[dependencies]
neo4rs = "0.6"
tokio = { version = "1", features = ["full"] }
cfg-if = "1.0"

reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
dotenv = { version = "0.15", optional = true }